--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
   <body>
-    <header class="hdr">
+    <header class="header">
       <nav class="hdr_nav">
         <ul class="nav_list">
           <li class="nav_item main_item">
@@ -117,24 +117,24 @@
               <div class="about_text_1">
                 Здесь вы не встретите очередное пафосное cобрание невероятно<br />
                 дорогого антиквариата. Наши лоты вообще не должны были
-                попастьни<br />
+                попастьни<br/>
                 на один аукцион. Потому что кому нужен дневник
-                девочки-подростка<br />
+                девочки-подростка<br/>
                 или картина, которую может нарисовать даже ребёнок? Кому
-                нужны<br />
+                нужны<br/>
                 все эти странные вещи, созданные любителями?
               </div>
               <div class="about_text_2">
                 Слишком сложные или, наоборот, слишком простые. Опережающие
                 <br />своё время. В пух и прах растерзанные критиками.
-                Непринятые и<br />
+                Непринятые и<br/>
                 непонятые. Когда-то они казались просто неудачными Но,
-                несмотря<br />
-                на критику, кажущуюся простоту или сложность, сейчас без этих<br />
+                несмотря<br/>
+                на критику, кажущуюся простоту или сложность, сейчас без этих<br/>
                 лотов невозможно представить современную культуру. Когда в
-                эти<br />
+                эти<br/>
                 вещи не верил никто, продолжали верить их создатели. И сейчас
-                <br />
+                <br/>
                 эти лоты стали культовыми.
               </div>
             </div>
